--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 </head>
 <body>
 
-    <video class="bg-video" autoplay muted loop plaesinline>
+   <!-- <video class="bg-video" autoplay muted loop plaesinline>
         <source src="video-background/video-back4.mp4" type="video/mp4">
-    </video>
+    </video> -->
     <nav>
         <ul>
             <li> <a href="#home"  data-scroll="home">Home</a> </li>
@@ -67,3 +67,4 @@
 </body>
 
 </html>
+
